--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laracasts/utilities": "^3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "~2.1.0",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
